--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,15 @@ bin/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store!/java_core_1.iml
+!/.idea/
+!/java_core_1.iml
+/.idea/.gitignore
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/dbnavigator.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/codeStyles/Project.xml
+/.idea/vcs.xml
+/java_core_1.iml
+/.idea/uiDesigner.xml
